<resources>
    <string name="app_name">V-AB 更新助手</string>
    <string name="string_home_title_info">系统信息</string>
    <string name="string_home_title_tips">提示</string>
    <string name="string_home_tips_main"><![CDATA[软件运行前提：<br>1. 设备获取Root权限且授予本软件权限；
		<br>2. 设备支持<a href="https://blog.csdn.net/oAiYinSiTan12/article/details/119685061">V-AB系统分区</a>；
		<br> <br>
		可能出现的问题：
		<br>
		1. 选择 ROM 时一定要注意是否完整，否则容易出事哦；
		<br>
		2. 由于 Android 对后台服务的限制，请在更新时尽量保证本软件为前台应用；
		<br>
		3. 如果出现卡进度的情况(一般是挂后台出现)，可以直接结束应用，重新选择相同的ROM更新即可(进度不会重置)；
		<br>
		4. 增量包更新的出现错误码20，需要首次在助手里使用全量包进行更新，这样后续就能使用增量包了(部分设备)
		<br>
		5. 如果提示更新失败，请重启手机并等候一段时间再进行刷写操作]]></string>
    <string name="string_home_flash">选择文件更新</string>
    <string name="string_no_root">获取root失败!</string>
    <string name="string_a_only">A-Only</string>
    <string name="string_home_title_about">关于我们</string>
    <string name="string_home_about">快进来看看，了解下作者和贡献者吧</string>
    <string name="string_about_blog">官方博客</string>
    <string name="string_about_blog_des">大家没事可以来看看我的博客呀~</string>
    <string name="app_version">版本 3000</string>
    <string name="string_about_des">由 LibSu (6.0.0)驱动</string>
    <string name="string_about_developer">开发者</string>
    <string name="string_about_developer_info">开发者信息</string>
    <string name="string_about_author_des">你好，我是King丶枫岚</string>
    <string name="string_about">关于</string>
    <string name="string_about_email_des">i@yowal.cn</string>
    <string name="string_about_email">邮箱</string>
    <string name="string_about_thank">感谢</string>
    <string name="string_filedialog_cancel">取消</string>
    <string name="string_filedialog_title_file">选择文件</string>
    <string name="dialog_input_superkey">设置超级密钥</string>
    <string name="string_reboot">重启</string>
    <string name="string_reboot_recovery">重启至 Recovery</string>
    <string name="string_reboot_bootloader">重启至 Bootloader</string>
    <string name="string_reboot_download">重启至 Download</string>
    <string name="string__reboot_edl">重启至 EDL</string>
</resources>