<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize" />

    <me.yowal.updatehelper.widget.IOSOverScrollView
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSurfaceContainer"
                app:cardCornerRadius="10dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="18dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon_home_phone"
                            android:tint="?attr/colorPrimary" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/string_home_title_info"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/info_system_brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/info_system_model"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/info_android_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/info_root_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/info_action_solt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/home_no_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#B3261D"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:padding="12dp"
                    android:text="@string/string_no_root"
                    android:textColor="@color/white" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_flash"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cornerRadius="10dp"
                app:iconGravity="textStart"
                android:text="@string/string_home_flash"
                app:icon="@drawable/icon_home_flash" />

            <me.yowal.updatehelper.widget.ProgressButton
                android:visibility="gone"
                android:id="@+id/button_progress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:progress_btn_radius="10dp"
                app:progress_btn_background_color="?attr/colorPrimary"
                app:progress_btn_background_second_color="?attr/colorSurfaceContainer"
                app:progress_btn_ball_style="STYLE_BALL_PULSE"
                app:progress_btn_border_width="2dp" />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSurfaceContainer"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="18dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon_notification_important"
                            android:tint="?attr/colorPrimary" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_home_title_tips"
                            android:layout_marginStart="4dp"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/home_tips_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSurfaceContainer"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/button_about"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="18dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon_info"
                            android:tint="?attr/colorPrimary" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_home_title_about"
                            android:layout_marginStart="4dp"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/string_home_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="12sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </me.yowal.updatehelper.widget.IOSOverScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>